# tidb-with-sqlx

./: .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  compose.yaml  rustfmt.toml
.sqlx/: query-1f8a622f9712be8ad260e2063b5369a179d256529272c3630950efb7cd41a609.json  query-53a0af16a02bd8704537141f2ef69e01f6c83fb5627ead2be433fe730dacc3e3.json
migrations/: 20250807235854_start.up.sql
src/: main.rs
